worked on editing wording in files

--- a/app/public/blog.html
+++ b/app/public/blog.html
@@ -18,7 +18,7 @@
         <a class="btn btn-default" href="/cms">New Post</a>
       </div>
       <div class="col-md-2 col-sm-2">
-        <a class="btn btn-default" href="/authors">Manage Authors</a>
+        <a class="btn btn-default" href="/user">Manage Authors</a>
       </div>
     </div>
     <div class="row">
