--- a/app/public/cms.html
+++ b/app/public/cms.html
@@ -19,7 +19,7 @@
         <a class="btn btn-default" href="/blog">Go to Blog</a>
       </div>
       <div class="col-md-2 col-sm-2">
-        <a class="btn btn-default" href="/authors">Manage Authors</a>
+        <a class="btn btn-default" href="/user">Manage Authors</a>
       </div>
     </div>
 		<div class="row">
