adding owner section

--- a/app/public/cms.html
+++ b/app/public/cms.html
@@ -32,8 +32,13 @@
 						<label for="body">Body:</label>
 						<textarea placeholder="Post Body" class="form-control" rows="10" id="body"></textarea>
 						<div class="form-group">
-							<label for="category">Select Author:</label>
+							<label for="category">Select User:</label>
 							<select class="form-control" id="author">
+  						</select>
+						</div>
+						<div class="form-group">
+							<label for="category">Select Owner:</label>
+							<select class="form-control" id="owner">
   						</select>
 						</div>
 						<br />
