--- a/app/public/cms.html
+++ b/app/public/cms.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>CMS - Express</title> 
+	<title>Create Rating</title> 
 	
 	<!-- Latest compiled and minified CSS & JS -->
 	<link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/flatly/bootstrap.min.css" rel="stylesheet">
@@ -19,21 +19,22 @@
         <a class="btn btn-default" href="/blog">Go to Blog</a>
       </div>
       <div class="col-md-2 col-sm-2">
-        <a class="btn btn-default" href="/user">Manage Authors</a>
+        <a class="btn btn-default" href="/user">Manage Users</a>
       </div>
     </div>
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3">
 				<form id="cms">
 					<div class="form-group">
-						<label for="title">Title:</label>
-						<input placeholder="Post Title" type="text" class="form-control" id="title">
+						<label for="title">Rating:</label>
+						<p>Enter a value between 0 and 5 (0 being the worst, 5 being the best)</p>
+						<input placeholder="Rating" type="text" class="form-control" id="rating">
 						<br />
-						<label for="body">Body:</label>
-						<textarea placeholder="Post Body" class="form-control" rows="10" id="body"></textarea>
+						<label for="body">Comments:</label>
+						<textarea placeholder="Enter comments about your experience here" class="form-control" rows="10" id="comments"></textarea>
 						<div class="form-group">
 							<label for="category">Select User:</label>
-							<select class="form-control" id="author">
+							<select class="form-control" id="user">
   						</select>
 						</div>
 						<div class="form-group">
@@ -42,7 +43,7 @@
   						</select>
 						</div>
 						<br />
-						<button type="submit" class="btn btn-success submit">Submit</button>
+						<button type="submit" class="btn btn-success submit">Submit Rating!</button>
 					</div>
 				</form>
 			</div>
