--- a/app/public/user-manager.html
+++ b/app/public/user-manager.html
@@ -3,7 +3,8 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>CMS - Express</title>
+	<title>Manage Users</title>
+	
 	<!-- Latest compiled and minified CSS & JS -->
 	<link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/flatly/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/styles.css" media="screen" title="no title">
@@ -15,24 +16,24 @@
 	<div class="container">
 		<div class="row top-30">
       <div class="col-md-2 col-sm-2">
-        <a class="btn btn-default" href="/blog">Go to Blog</a>
+        <a class="btn btn-default" href="/blog">My Ratings</a>
       </div>
 			<div class="col-md-2 col-sm-2">
-        <a class="btn btn-default" href="/cms">New Post</a>
+        <a class="btn btn-default" href="/cms">New Ratings</a>
       </div>
     </div>
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2">
 				<div class="author-container">
-					<h1>Authors</h1>
+					<h1>Users</h1>
 					<table class="table table-striped">
 						<thead>
 							<tr>
 								<th>Name</th>
-								<th># of Posts</th>
-								<th>See Author's Posts</th>
-								<th>New Post</th>
-								<th>Delete Author</th>
+								<th># of Ratings</th>
+								<th>See User's Ratings</th>
+								<th>New Rating</th>
+								<th>Delete User</th>
 							</tr>
 						</thead>
 						<tbody>
@@ -41,7 +42,7 @@
 									<td colspan="4">
 										<input placeholder="Enter a name" id="author-name" type="text" />
 									</td>
-									<td><button type="submit" class="btn btn-success">Create Author</button>
+									<td><button type="submit" class="btn btn-success">Create User</button>
 									</td>
 								</form>
 							</tr>
@@ -52,7 +53,7 @@
 		</div>
 		</d>
 		<!-- Custom Script -->
-		<script src="js/author.js" type="text/javascript"></script>
+		<script src="js/user.js" type="text/javascript"></script>
 
 </body>
 
