--- a/app/public/blog.html
+++ b/app/public/blog.html
@@ -18,7 +18,10 @@
         <a class="btn btn-default" href="/cms">New Post</a>
       </div>
       <div class="col-md-2 col-sm-2">
-        <a class="btn btn-default" href="/user">Manage Authors</a>
+        <a class="btn btn-default" href="/user-manager">Manage Authors</a>
+      </div>
+      <div class="col-md-2 col-sm-2">
+        <a class="btn btn-default" href="/owner">Go to Owners</a>
       </div>
     </div>
     <div class="row">
