--- a/app/public/cms.html
+++ b/app/public/cms.html
@@ -15,12 +15,15 @@
 <body>
 	<div class="container hidden">
 		<div class="row top-30">
-      <div class="col-md-2 col-sm-2">
-        <a class="btn btn-default" href="/blog">Go to Blog</a>
-      </div>
-      <div class="col-md-2 col-sm-2">
-        <a class="btn btn-default" href="/user">Manage Authors</a>
-      </div>
+      		<div class="col-md-2 col-sm-2">
+        		<a class="btn btn-default" href="/blog">Go to Blog</a>
+      		</div>
+      		<div class="col-md-2 col-sm-2">
+        		<a class="btn btn-default" href="/user-manager">Manage Authors</a>
+      		</div>
+      		<div class="col-md-2 col-sm-2">
+    			<a class="btn btn-default" href="/owner">Go to Owners</a>
+    		</div>
     </div>
 		<div class="row">
 			<div class="col-md-6 col-md-offset-3">
