--- a/app/public/cms.html
+++ b/app/public/cms.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="css/styles.css" media="screen" title="no title">
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
 </head>
 
 <body>
@@ -52,6 +53,10 @@
 			</div>
 		</div>
 	</div>
+
+	<!-- Firebase Script -->
+	<script src="https://www.gstatic.com/firebasejs/4.6.2/firebase.js"></script>
+
 	<!-- Custom Script -->
 	<script src="js/cms.js" type="text/javascript"></script>
 
