additions for owner

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -9,6 +9,10 @@
 
   <!-- Bootstrap -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+  <!-- jQuery -->
+  <script src="https://code.jquery.com/jquery.js"></script>
+  <!-- Firebase -->
+  <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase.js"></script>
 
 </head>
 
@@ -57,7 +61,7 @@
       <div class="col-lg-6">
         <div class="panel panel-default">
           <div class="panel-heading">
-            <h3 class="panel-title">Most Recent Member</h3>
+            <h3 class="panel-title">Most Recent User</h3>
           </div>
           <div class="panel-body" id="recent-member">
             <h2 id="name-display">Jimmy John</h2>
@@ -69,78 +73,8 @@
     </div>
 
   </div>
-
-  <!-- jQuery -->
-  <script src="https://code.jquery.com/jquery.js"></script>
-
-
-<script src="https://www.gstatic.com/firebasejs/4.6.2/firebase.js"></script>
-<script>
-  // Initialize Firebase
-  var config = {
-    apiKey: "AIzaSyAhu_Jaq3JhCE3BJ7wg43DrH7b6FtpZND0",
-    authDomain: "home-owner-rater.firebaseapp.com",
-    databaseURL: "https://home-owner-rater.firebaseio.com",
-    projectId: "home-owner-rater",
-    storageBucket: "home-owner-rater.appspot.com",
-    messagingSenderId: "275239062934"
-  };
-  firebase.initializeApp(config);
-
-    // Make it work
-    // Create a variable to reference the database
-    var database = firebase.database();
-
-    // Initial Values
-    var name = "";
-    var email = "";
-    var password = "";
-    
-    // Capture Button Click
-    $("#add-user").on("click", function() {
-      // Don't refresh the page!
-      event.preventDefault();
-
-      // YOUR TASK!!!
-      // Code in the logic for storing and retrieving the most recent user.
-      // Don't forget to provide initial data to your Firebase database.
-      name = $("#name-input").val().trim();
-      email = $("#email-input").val().trim();
-      password = $("#password-input").val().trim();
-
-
-      firebase.auth().createUserWithEmailAndPassword(email, password).catch(function(error) {
-        // Handle Errors here.
-        var errorCode = error.code;
-        var errorMessage = error.message;
-        // ...
-      });
-
-      database.ref().set({
-        name: name,
-        email: email,
-        password: password
-      });
-
-    });
-
-    // Firebase watcher + initial loader HINT: .on("value")
-    database.ref().on("value", function(snapshot) {
-
-      // Log everything that's coming out of snapshot
-      // console.log(snapshot.val());
-      console.log(snapshot.val().name);
-      console.log(snapshot.val().email);
-
-      // Change the HTML to reflect
-      $("#name-display").text(snapshot.val().name);
-      $("#email-display").text(snapshot.val().email);
-
-      // Handle the errors
-    }, function(errorObject) {
-      console.log("Errors handled: " + errorObject.code);
-    });
-  </script>
+  
+  <script src="js/index.js"></script>
 
 </body>
 
