--- a/app/public/owner.html
+++ b/app/public/owner.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>CMS - Express</title>
+	<title>Owner</title>
 	<!-- Latest compiled and minified CSS & JS -->
 	<link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/flatly/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/styles.css" media="screen" title="no title">
@@ -54,7 +54,7 @@
 		</div>
 	</div>
 	<!-- Custom Script -->
-	<script src="js/owner.js" type="text/javascript"></script>
+	<script src="js/owner.js"></script>
 
 </body>
 
