--- a/app/public/blog.html
+++ b/app/public/blog.html
@@ -15,6 +15,24 @@
 
 <body>
   <div class="container blog">
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="./index.html">My Favorite Homeowner</a>
+        
+        <form class="navbar-form navbar-right" role="search">
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Homeowner">
+          </div>
+          <button type="submit" class="btn btn-default">Search</button>
+
+          <a href="./index.html">
+            <button class="btn btn-default" id="signout-user" type="button">Log Out</button>
+          </a>
+        </form>
+
+      </div>
+    </nav>
+
     <div class="row">
       <div class="col-md-2 col-sm-2">
         <a class="btn btn-default" href="/cms">New Post</a>
