--- a/app/public/user-manager.html
+++ b/app/public/user-manager.html
@@ -14,6 +14,22 @@
 
 <body>
 	<div class="container">
+		<nav class="navbar navbar-default">
+          <div class="container-fluid">
+            <a class="navbar-brand" href="./index.html">My Favorite Homeowner</a>
+            
+            <form class="navbar-form navbar-right" role="search">
+              <div class="form-group">
+                <input type="text" class="form-control" placeholder="Homeowner">
+              </div>
+              <button type="submit" class="btn btn-default">Search</button>
+
+              <button class="btn btn-default" id="signout-user" type="submit">Log Out</button>
+            </form>
+
+          </div>
+        </nav>
+
 		<div class="row top-30">
 			<div class="col-md-2 col-sm-2">
 				<a class="btn btn-default" href="/blog">My Ratings</a>
