changes still needed to cms, a better owner search woth routeName, make sure buttons take you where you need to go

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -20,7 +20,8 @@
               <div class="form-group">
                 <input type="text" class="form-control" placeholder="Homeowner">
               </div>
-              <button type="submit" class="btn btn-default">Search</button>
+              <button id="search" type="submit" class="btn btn-default">Search</button>
+              <button id="signout-user" type="submit" class="btn btn-default">Log Out</button>
 
             </form>
 
@@ -81,7 +82,7 @@
                                 <input class="form-control" id="password-login" type="password">
                             </div>
                                 
-                            <button class="btn btn-default" id="login-user" type="submit"></button>
+                            <button class="btn btn-default" id="login-user" type="submit">Log In</button>
                             
                         </form>
                     </div>
