--- a/app/public/cms.html
+++ b/app/public/cms.html
@@ -30,23 +30,33 @@
 			<div class="col-md-6 col-md-offset-3">
 				<form id="cms">
 					<div class="form-group">
-						<label for="title">Rating:</label>
-						<p>Enter a value between 0 and 5 (0 being the worst, 5 being the best)</p>
-						<input placeholder="Rating" type="text" class="form-control" id="rating">
-						<br />
-						<label for="body">Comments:</label>
-						<textarea placeholder="Enter comments about your experience here" class="form-control" rows="10" id="comments"></textarea>
+						<form id="owner-form">
+							<div class="form-group">
+								<label for="owner-create">Create Owner:</label>
+								<input placeholder="Owner Name" id="owner-name" type="text" class="form-control">
+								<button type="submit" class="btn btn-success btn-xs">Create Owner</button>
+							</div>
+						</form>
+						<!-- <button type="submit" class="btn btn-success btn-xs submit">Create Owner</button> -->
+
+						<div class="form-group">
+							<label for="title">Rating:</label>
+							<p>Enter a value between 0 and 5 (0 being the worst, 5 being the best)</p>
+							<input placeholder="Rating" type="text" class="form-control" id="rating">
+						</div>
+						<div class="form-group">
+							<label for="body">Comments:</label>
+							<textarea placeholder="Enter comments about your experience here" class="form-control" rows="10" id="comments"></textarea>
+						</div>
 						<div class="form-group">
 							<label for="category">Select User:</label>
-							<select class="form-control" id="user">
-  						</select>
+							<select class="form-control" id="user"></select>
 						</div>
-						<div class="form-group">
+						<!-- <div class="form-group">
 							<label for="category">Select Owner:</label>
-							<select class="form-control" id="owner">
-  						</select>
-						</div>
-						<br />
+							<select class="form-control" id="owner"></select>
+						</div> -->
+						
 						<button type="submit" class="btn btn-success submit">Submit Rating!</button>
 					</div>
 				</form>
