--- a/app/public/index.html
+++ b/app/public/index.html
@@ -15,10 +15,10 @@
         <a class="navbar-brand" href="./index.html">My Favorite Homeowner</a>
         
         <form class="navbar-form navbar-right" role="search">
-          <div class="form-group">
+          <!-- <div class="form-group">
             <input type="text" class="form-control" placeholder="Homeowner">
           </div>
-          <button type="submit" class="btn btn-default">Search</button>
+          <button type="submit" class="btn btn-default">Search</button> -->
 
           <a href="./home.html">
             <button type="button" class="btn btn-default">Sign in</button>
@@ -71,6 +71,7 @@
     </div>
 
   </div>
+  <script src="./js/index.js"></script>
 
 </body>
 </html>
