--- a/app/public/owner.html
+++ b/app/public/owner.html
@@ -3,75 +3,129 @@
 
 <head>
 	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+
 	<title>Owner</title>
-	<!-- Latest compiled and minified CSS & JS -->
+
+	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+    <meta name="viewport" content="width=device-width" />
+	
+	<!-- CSS -->
 	<link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/flatly/bootstrap.min.css" rel="stylesheet">
+    <link href="css/animate.min.css" rel="stylesheet"/>
+	<link href="css/light-bootstrap-dashboard.css?v=1.4.0" rel="stylesheet"/>
 	<link rel="stylesheet" href="css/styles.css" media="screen" title="no title">
+	<!-- Scripts -->
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+	<!--     Fonts and icons     -->
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
+    <link href="css/pe-icon-7-stroke.css" rel="stylesheet"/>
 </head>
 
 <body>
-	<div class="container">
-		<nav class="navbar navbar-default">
-          <div class="container-fluid">
-            <a class="navbar-brand" href="./index.html">My Favorite Homeowner</a>
-            
-            <form class="navbar-form navbar-right" role="search">
-              <div class="form-group">
-                <input type="text" class="form-control" placeholder="Homeowner">
-              </div>
-              <button type="submit" class="btn btn-default">Search</button>
+	<div class="sidebar" data-color="orange" data-image="img/sidebar-5.jpg">
+    <!-- change the color of the sidebar: "blue | azure | green | orange | red | purple" -->
+    	
+    	<div class="sidebar-wrapper">
+            <div class="logo">
+                <a href="./index.html" class="simple-text">
+                    My Favorite Homeowner
+                </a>
+            </div>
 
-              <button class="btn btn-default" id="signout-user" type="submit">Log Out</button>
-            </form>
+            <ul class="nav">
+                <li class="active">
+                    <a href="/blog">
+                        <i class="pe-7s-like2"></i>
+                        <p>Go to Reviews</p>
+                    </a>
+                </li>
+                <li>
+                	<a href="/cms">
+                		<i class="pe-7s-add-user"></i>
+                        <p>New Review</p>
+                	</a>
+                </li>
+                <li>
+                	<a href="/owner">
+                		<i class="pe-7s-users"></i>
+                        <p>Go to Owners</p>
+                	</a>
+                </li>
+            </ul>
 
-          </div>
-        </nav>
-
-
-		<div class="row top-30">
-      		<div class="col-md-2 col-sm-2">
-        		<a class="btn btn-default" href="/blog">Go to Blog</a>
-      		</div>
-			<div class="col-md-2 col-sm-2">
-        		<a class="btn btn-default" href="/cms">New Post</a>
-     		</div>
-      		<div class="col-md-2 col-sm-2">
-    			<a class="btn btn-default" href="/owner">Go to Owners</a>
-    		</div>
     	</div>
-		<div class="row">
-			<div class="col-md-8 col-md-offset-2">
-				<div class="owner-container">
-					<h1>Owners</h1>
-					<table class="table table-striped">
-						<thead>
-							<tr>
-								<th>Name</th>
-								<th># of Reviews</th>
-								<th>See Owners's Comments</th>
-								<th>Delete Owner</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr id="form-row">
-								<form id="owner-form">
-									<td colspan="4">
-										<input placeholder="Enter a name" id="owner-name" type="text" />
-									</td>
-									<td><button type="submit" class="btn btn-success">Create Owner</button>
-									</td>
-								</form>
-							</tr>
-						</tbody>
-					</table>
+    </div>
+
+	<div class="main-panel">
+		<nav class="navbar navbar-default">
+          	<div class="container-fluid">
+            	<div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                </div>
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav navbar-left">
+                    </ul>
+
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>
+                        	<button type="submit" class="btn btn-default">Search</button>
+                        </li>
+                        <li>
+							<button class="btn btn-default" id="signout-user" type="submit">Log Out</button>
+						</li>
+                    </ul>
+
+                </div>
+          	</div>
+        </nav>
+		
+		<div class="content">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-md-8 col-md-offset-2">
+						<div class="owner-container">
+							<h1>Owners</h1>
+							<table class="table table-striped">
+								<thead>
+									<tr>
+										<th>Name</th>
+										<th># of Reviews</th>
+										<th>See Owners's Comments</th>
+										<th>Delete Owner</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr id="form-row">
+										<form id="owner-form">
+											<td colspan="3">
+												<input placeholder="Enter a name" id="owner-name" type="text" />
+											</td>
+											<td><button type="submit" class="btn btn-success">Create Owner</button>
+											</td>
+										</form>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
+
 	</div>
+	
 	<!-- Custom Script -->
 	<script src="js/owner.js" type="text/javascript"></script>
+	<!-- LIght bootstrap JS -->
+	<script src="js/light-bootstrap-dashboard.js?v=1.4.0"></script>
 
 </body>
 
