--- a/app/public/user-manager.html
+++ b/app/public/user-manager.html
@@ -7,6 +7,7 @@
 	
 	<!-- Latest compiled and minified CSS & JS -->
 	<link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/flatly/bootstrap.min.css" rel="stylesheet">
+	<link href="css/light-bootstrap-dashboard.css?v=1.4.0" rel="stylesheet"/>
 	<link rel="stylesheet" href="css/styles.css" media="screen" title="no title">
 	<script src="https://code.jquery.com/jquery.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
@@ -16,7 +17,7 @@
 	<div class="container">
 		<nav class="navbar navbar-default">
           <div class="container-fluid">
-            <a class="navbar-brand" href="./index.html">My Favorite Homeowner</a>
+            <a class="navbar-brand" id="title" href="./index.html">My Favorite Homeowner</a>
             
             <form class="navbar-form navbar-right" role="search">
               <div class="form-group">
