--- a/app/public/blog.html
+++ b/app/public/blog.html
@@ -71,12 +71,12 @@
           </ul>
 
           <ul class="nav navbar-nav navbar-right">
-            <li>
-              <button type="submit" class="btn btn-default">Search</button>
-            </li>
-            <li>
-              <button class="btn btn-default" id="signout-user" type="submit">Log Out</button>
-            </li>
+            <a href="./index.html">
+              <button id="search" type="submit" class="btn btn-default">Search</button>
+            </a>
+            
+            <button class="btn btn-default" id="signout-user" type="submit">Log Out</button>
+
           </ul>
 
         </div>
