--- a/app/public/home.html
+++ b/app/public/home.html
@@ -69,12 +69,11 @@
               </ul>
 
               <ul class="nav navbar-nav navbar-right">
-                  <li>
-                      <button id="search" type="submit" class="btn btn-default">Search</button>
-                  </li>
-                  <li>
-                      <button id="signout-user" type="submit" class="btn btn-default">Log Out</button>
-                  </li>
+                <a href="./index.html">
+                    <button id="search" type="submit" class="btn btn-default">Search</button>
+                </a>
+                
+                <button id="signout-user" type="submit" class="btn btn-default">Log Out</button>
               </ul>
 
             </div>
@@ -153,6 +152,11 @@
     <script src="https://code.jquery.com/jquery.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.6.2/firebase.js"></script>
     <script src="./js/home.js"></script>
+
+    <!-- LIght bootstrap JS -->
+    <script src="js/light-bootstrap-dashboard.js?v=1.4.0"></script>
+    <!--  Notifications Plugin    -->
+    <script src="js/bootstrap-notify.js"></script>
 </body>
 
 </html>
