changes in database storage, and added about page

--- a/app/public/about.html
+++ b/app/public/about.html
@@ -37,14 +37,14 @@
       </div>
 
       <ul class="nav">
-        <li>
-          <a href="./about.html">
+        <li class="active">
+          <a href="#">
             <i class="pe-7s-info"></i>
             <p>Why Use This Site</p>
           </a>
         </li>
         <li>
-          <a href="./contact.html">
+          <a href="#">
             <i class="pe-7s-id"></i>
             <p>About the Creators</p>
           </a>
@@ -84,36 +84,19 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="card">
-              <h1 class="text-center">Welcome to My Favorite Homeowner</h1>
-              <h2 class="text-center">Take back control and find the homeowners<br/> you want to work for!</h2>
-            </div>
-          </div>
-        </div>
-        <div class="row">
-
-          <div class="col-lg-12">
-
-            <div class="card">
               <div class="header">
-                <h3 class="panel-title"><strong>Homeowner Search</strong></h3>
+                <h4 class="title"><strong>Why You Need to Use This Site</strong></h4>
               </div>
-              <div class="panel-body">
-                <input type="text" id="homeowner-search" class="form-control">
-                <br>
-                <div class="text-right">
-                  <button type="submit" class="btn btn-primary btn-md" id="search-btn"><span class="glyphicon glyphicon-search"></span> Find a Homeowner</button>
-
-                </div>
+              <div class="content">
+                <p>
+                  Designed to give power back to the working man, this website acts like Home Advisor or Yelp for a contractor. You can see if homeowners you give estimates to are rated highly, and adjust for the job accordingly. At the end of the job, homeowners want to get good reviews to receive more bids at competitive prices in the future.
+                </p>
+                <p>
+                  I came up with the idea of My Favorite Homeowner after working in the home improvment industry for three years. I wanted to set up a system to spread awarness about homeowner behavior, whether it is good or bad. With the spread of review websites in the last couple of years, this seemed like the right system to use.
+                </p>
               </div>
             </div>
           </div>      
-        </div>
-        <div class="row">
-
-          <div class="col-lg-12">
-            <div id="ownerList-section">
-            </div>
-          </div>
         </div>
       </div>
     </div>
@@ -126,19 +109,7 @@
   <!--  Notifications Plugin    -->
   <script src="js/bootstrap-notify.js"></script>
 
-  <script type="text/javascript">
-      $(document).ready(function(){
-
-          $.notify({
-              message: "Welcome to <b>My Favorite Homeowner</b> - Click sign in to create an account, or search for a homeowner in your area.",
-              icon: 'pe-7s-bell',
-            },{
-                type: 'info',
-                timer: 4000
-            });
-
-      });
-  </script>
+  <script type="text/javascript"></script>
 
 </body>
 </html>
