created about us page, other minor edits

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -37,13 +37,13 @@
 
           <ul class="nav">
             <li>
-              <a href="#">
+              <a href="./about.html">
                 <i class="pe-7s-info"></i>
                 <p>Why Use This Site</p>
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="./contact.html">
                 <i class="pe-7s-id"></i>
                 <p>About the Creators</p>
               </a>
