--- a/app/public/about.html
+++ b/app/public/about.html
@@ -44,7 +44,7 @@
           </a>
         </li>
         <li>
-          <a href="#">
+          <a href="./contact.html">
             <i class="pe-7s-id"></i>
             <p>About the Creators</p>
           </a>
