--- a/app/public/index.html
+++ b/app/public/index.html
@@ -84,8 +84,11 @@
         <div class="row">
           <div class="col-lg-12">
             <div class="card">
-              <h1 class="text-center">Welcome to My Favorite Homeowner</h1>
-              <h2 class="text-center">Take back control and find the homeowners<br/> you want to work for!</h2>
+              <div class="header">
+                <h1 class="text-center">Welcome to My Favorite Homeowner</h1>
+                <h2 class="text-center">Take back control and find the homeowners<br> you want to work for!</h2>
+                <br>
+              </div>
             </div>
           </div>
         </div>
